I can't stop tinkering.  Changed the font size and line spacing in an effort to make the resume section easier to read

--- a/css/style.css
+++ b/css/style.css
@@ -502,8 +502,9 @@ div.experience .role-responsibility {
 }
 
 div.experience .role-responsibility p {
-  font-size: calc(0.2vw + 16.5px);
+  font-size: calc(0.1vw + 14px);
   padding: 2vh 2vw;
+  line-height: 2.5vh;
 }
 
 div.experience .role-responsibility p:first-child {
